--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/ga-maamli": "^5.0.3",
     "astro": "^4.15.4",
+    "houdini-powdered-gradient": "^1.1.2",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
